Fix scroll button which became invisible for mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -254,6 +254,10 @@ Projects
 	margin: 0 1%;
 }
 
+.menu ul:last-child {
+	padding-right: 65px;
+}
+
 .menu div {
 	width: 23vw;
 	max-width: 450px;
